<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settingsTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="30sp" />

    <Button
        android:id="@+id/settingsAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account" />

    <Button
        android:id="@+id/settingsNotiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications" />

    <Button
        android:id="@+id/settingsSupportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_and_support" />

    <Button
        android:id="@+id/settingsShareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_records" />

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out" />

</LinearLayout>